8175813: PPC64: "mbind: Invalid argument" when -XX:+UseNUMA is used

Reviewed-by: simonis, dholmes